--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "base64-img": "^1.0.4",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "debug": "^4.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "glob": "^7.1.6",
